--- a/block/_todolist.scss
+++ b/block/_todolist.scss
@@ -9,6 +9,7 @@
     padding: 30px;
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
     font-family: 'Open Sans', sans-serif;
+    border-radius: 7px;
 
       
       h1 {
@@ -98,6 +99,10 @@
       
       .empty {
         color: darkslategrey;
+      }
+
+      .empty p{
+        text-align: center;
       }
 
       ::placeholder{
