--- a/block/_todolist.scss
+++ b/block/_todolist.scss
@@ -7,7 +7,7 @@
     margin-right: auto;
     background-color: white;
     padding: 30px;
-    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 18px 4px rgb(0 0 0 / 9%);
     font-family: 'Open Sans', sans-serif;
     border-radius: 7px;
 
@@ -33,6 +33,7 @@
         width: 400px;
         border: 3px solid #000000;
         border-radius: 5px 0 0 5px;
+        border-right: 0;
       }
       
       .li-container {
