--- a/styles/styles.css
+++ b/styles/styles.css
@@ -205,7 +205,7 @@ p.id {
   margin-right: auto;
   background-color: white;
   padding: 30px;
-  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 18px 4px rgba(0, 0, 0, 0.09);
   font-family: "Open Sans", sans-serif;
   border-radius: 7px;
 }
@@ -227,6 +227,7 @@ p.id {
   width: 400px;
   border: 3px solid #000000;
   border-radius: 5px 0 0 5px;
+  border-right: 0;
 }
 .container-todo .li-container {
   background-color: white;
