--- a/block/_todolist.scss
+++ b/block/_todolist.scss
@@ -49,22 +49,25 @@
       
       li {
         list-style: none;
-        background-color: lightgray;
+        background-color: #e9e8e8;
         border-radius: 10px;
         margin-top: 15px;
         display: flex;
+        align-items: center;
+        font-weight: 600;
       }
       
       li p {
         margin: 0;
-        padding: 15px;
+        padding: 8px;
         width: 100%;
+        padding-left: 25px;
       }
-      
-      .btn-delete {
+
+      li > button{
         margin-left: auto;
         border: none;
-        background-color: #e31746;
+        background-color: #3366b0;
         color: white;
         font-weight: bold;
         padding: 5px 10px;
@@ -75,9 +78,9 @@
         font-size: 1.2em;
       }
       
-      .btn-delete:hover {
+      li > button:hover {
         cursor: pointer;
-        background-color: lightseagreen;
+        background-color: #ffcb03;
       }
       
       .btn-add {
