--- a/block/_principal-block.scss
+++ b/block/_principal-block.scss
@@ -69,6 +69,12 @@ p.tipo {
 
 p.id {
     margin-bottom: 10px;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
     font-weight: 700;
+    background-color: #efebeb;
+    width: 22%;
+    padding: 7px;
+    text-align: center;
+    border-radius: 20px;
+    border: 2px solid;
 }
