--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,10 +202,11 @@ p.id {
   text-align: center;
   border-radius: 20px;
   border: 2px solid;
+  font-family: monospace;
 }
 
 .cajah2 {
-  background-color: #efebeb;
+  background-color: #ffffff;
   margin: 18px 0 11px 0px;
   padding: 13px 5px;
   border: 1px solid #000000;
