--- a/block/_principal-block.scss
+++ b/block/_principal-block.scss
@@ -32,10 +32,11 @@ ol#pokedex {
     width: 156px;
     display: flex;
     flex-direction: column;
-    border: 6px solid #326bb2;
+    border: 3px solid #1b324f;
     box-shadow: 0px 0px 17px 2px #aaaaaa;
     filter: grayscale(1);
-    background-image: radial-gradient(circle at 46.39% 46.39%, #ffff41 0, #ffff29 25%, #f8d110 50%, #cfa000 75%, #a87600 100%);
+    background: rgb(229,109,0);
+    background: linear-gradient(310deg, rgba(229,109,0,1) 0%, rgba(255,241,0,1) 10%, rgba(255,253,211,1) 22%, rgba(255,241,0,1) 33%, rgba(229,109,0,1) 44%, rgba(204,139,0,1) 51%, rgba(255,241,0,1) 67%, rgba(255,253,211,1) 78%, rgba(255,241,0,1) 86%, rgba(229,109,0,1) 100%);
 }
 
 .tarjeta:hover {
