--- a/styles/styles.css
+++ b/styles/styles.css
@@ -156,10 +156,11 @@ ol#pokedex {
   width: 156px;
   display: flex;
   flex-direction: column;
-  border: 6px solid #326bb2;
+  border: 3px solid #1b324f;
   box-shadow: 0px 0px 17px 2px #aaaaaa;
   filter: grayscale(1);
-  background-image: radial-gradient(circle at 46.39% 46.39%, #ffff41 0, #ffff29 25%, #f8d110 50%, #cfa000 75%, #a87600 100%);
+  background: rgb(229, 109, 0);
+  background: linear-gradient(310deg, rgb(229, 109, 0) 0%, rgb(255, 241, 0) 10%, rgb(255, 253, 211) 22%, rgb(255, 241, 0) 33%, rgb(229, 109, 0) 44%, rgb(204, 139, 0) 51%, rgb(255, 241, 0) 67%, rgb(255, 253, 211) 78%, rgb(255, 241, 0) 86%, rgb(229, 109, 0) 100%);
 }
 
 .tarjeta:hover {
